# hido

./: .gitignore  CMakeLists.txt  README.md  build.sh
lib/libtmx-parser/: CMakeLists.txt  Makefile  base64.cpp  tmxparser.cpp  tmxparser.h
res/map/: map1.tmx  tileset.tsx
src/: bullet.cpp  bullet.hpp  car.cpp  car.hpp  network.cpp  network.hpp  player.cpp  player.hpp  state_buffer.hpp  util.cpp  util.hpp
src/client/: client.cpp  client.hpp  main.cpp
src/map/: map.cpp  map.hpp  map_renderer.cpp  map_renderer.hpp
src/server/: client_manager.cpp  client_manager.hpp  server.cpp  server.hpp
src/state/: bullet.cpp  bullet.hpp  player.cpp  player.hpp
